config mui theme

--- a/resources/sass/_variables.sass
+++ b/resources/sass/_variables.sass
@@ -19,9 +19,9 @@ $red: #e3342f
 $orange: #f6993f
 $yellow: #ffed4a
 $green: #38c172
-$teal: #4dc0b5
 $cyan: #6cb2eb
+
+$teal-light: #b2dfdb
 
 // Font
 $font-color-main: #20A0FF
-
